// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EmployeeDetail.vue (Vitest) > renders employee data correctly 1`] = `
"<div data-v-f333d322="" class="employee-detail">
  <div data-v-f333d322="" class="content">
    <div data-v-f333d322="" class="header">
      <h1 data-v-f333d322="">John Smith</h1>
      <div data-v-f333d322="" class="meta"><span data-v-f333d322="" class="job-title">Senior Software Engineer</span><span data-v-f333d322="" class="company"><a data-v-f333d322="" href="/companies/1" class="">Acme Corporation</a></span></div>
    </div>
    <div data-v-f333d322="" class="contact">
      <h2 data-v-f333d322="">Contact Information</h2>
      <div data-v-f333d322="" class="contact-grid">
        <div data-v-f333d322="" class="contact-item"><i data-v-f333d322="" class="fas fa-envelope"></i><a data-v-f333d322="" href="mailto:john.smith@acme.com">john.smith@acme.com</a></div>
        <div data-v-f333d322="" class="contact-item"><i data-v-f333d322="" class="fas fa-phone"></i><a data-v-f333d322="" href="tel:+44 123 456 7890">+44 123 456 7890</a></div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`EmployeeDetail.vue (Vitest) > renders employee without company correctly 1`] = `
"<div data-v-f333d322="" class="employee-detail">
  <div data-v-f333d322="" class="content">
    <div data-v-f333d322="" class="header">
      <h1 data-v-f333d322="">John Smith</h1>
      <div data-v-f333d322="" class="meta"><span data-v-f333d322="" class="job-title">Senior Software Engineer</span>
        <!--v-if-->
      </div>
    </div>
    <div data-v-f333d322="" class="contact">
      <h2 data-v-f333d322="">Contact Information</h2>
      <div data-v-f333d322="" class="contact-grid">
        <div data-v-f333d322="" class="contact-item"><i data-v-f333d322="" class="fas fa-envelope"></i><a data-v-f333d322="" href="mailto:john.smith@acme.com">john.smith@acme.com</a></div>
        <div data-v-f333d322="" class="contact-item"><i data-v-f333d322="" class="fas fa-phone"></i><a data-v-f333d322="" href="tel:+44 123 456 7890">+44 123 456 7890</a></div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`EmployeeDetail.vue (Vitest) > renders employee without phone number correctly 1`] = `
"<div data-v-f333d322="" class="employee-detail">
  <div data-v-f333d322="" class="content">
    <div data-v-f333d322="" class="header">
      <h1 data-v-f333d322="">Jane Doe</h1>
      <div data-v-f333d322="" class="meta"><span data-v-f333d322="" class="job-title">Product Manager</span><span data-v-f333d322="" class="company"><a data-v-f333d322="" href="/companies/1" class="">Acme Corporation</a></span></div>
    </div>
    <div data-v-f333d322="" class="contact">
      <h2 data-v-f333d322="">Contact Information</h2>
      <div data-v-f333d322="" class="contact-grid">
        <div data-v-f333d322="" class="contact-item"><i data-v-f333d322="" class="fas fa-envelope"></i><a data-v-f333d322="" href="mailto:jane.doe@acme.com">jane.doe@acme.com</a></div>
        <!--v-if-->
      </div>
    </div>
  </div>
</div>"
`;

exports[`EmployeeDetail.vue (Vitest) > renders error state correctly 1`] = `
"<div data-v-f333d322="" class="employee-detail">
  <div data-v-f333d322="" class="error">Failed to load employee details</div>
</div>"
`;

exports[`EmployeeDetail.vue (Vitest) > renders loading state correctly 1`] = `
"<div data-v-f333d322="" class="employee-detail">
  <div data-v-f333d322="" class="loading"> Loading... </div>
</div>"
`;
